# leapsys_ess_backend

./: pyproject.toml  requirements.txt  setup.py  sync.py  test_apis.py
leapsys_ess_backend/: generate_schemas.py  hooks.py  patches.txt  setup_chat.py  setup_geofencing.py
leapsys_ess_backend/api/: activity.py  ai.py  attendance.py  auth.py  chat.py  crm.py  dashboard.py  hr.py  ledger.py  payment.py  projects.py  sales.py  service.py  settings.py  utils.py
leapsys_ess_backend/doctype/ess_device_registration/: ess_device_registration.py
leapsys_ess_backend/doctype/leapsys_ess_app_settings/: leapsys_ess_app_settings.py
leapsys_ess_backend/leapsys_ess_backend/doctype/ess_device_registration/: ess_device_registration.json
leapsys_ess_backend/leapsys_ess_backend/doctype/ess_employee_location_log/: ess_employee_location_log.json  ess_employee_location_log.py
leapsys_ess_backend/leapsys_ess_backend/doctype/leapsys_ess_app_settings/: leapsys_ess_app_settings.json  leapsys_ess_app_settings.py
leapsys_ess_backend/leapsys_ess_backend/module_def/leapsys_ess_backend/: leapsys_ess_backend.json
leapsys_ess_backend/patches/: force_sync.py  force_sync2.py  force_sync3.py  force_sync4.py
